--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,6 +42,8 @@
   "dependencies": {
     "@types/minimist": "^1.2.1",
     "codemirror": "^5.59.2",
+    "esbuild": "^0.8.46",
+    "esbuild-register": "^2.0.0",
     "minimist": "^1.2.5",
     "react-error-boundary": "^3.1.0",
     "react-split": "^2.0.9"
