--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^7.17.0",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
+    "rollup": "^2.39.0",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.1.3"
   }
