--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "ES2017"
     ],
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "noEmit": true,
     "alwaysStrict": true,
     "types": [
