--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "node -r esbuild-register scripts/build.ts --watch",
     "build": "node -r esbuild-register scripts/build.ts --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "echo success"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +39,8 @@
     "react-dom": "^17.0.1",
     "rebass": "^4.0.7",
     "tailwindcss": "^2.0.3",
-    "@neo-tools/raw": "*"
+    "@neo-tools/raw": "*",
+    "@neo-tools/glob": "*"
   },
   "dependencies": {
     "@types/minimist": "^1.2.1",
