--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -23,12 +23,15 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@monaco-editor/react": "^4.0.9",
+    "@neo-tools/glob": "*",
+    "@neo-tools/raw": "*",
     "@types/fs-extra": "^9.0.6",
     "@types/live-server": "^1.2.0",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.12.3",
     "autoprefixer": "^10.2.4",
+    "esbuild": "^0.8.53",
     "fs-extra": "^9.1.0",
     "live-server": "^1.2.1",
     "mobx": "^6.1.6",
@@ -38,13 +41,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rebass": "^4.0.7",
-    "tailwindcss": "^2.0.3",
-    "@neo-tools/raw": "*",
-    "@neo-tools/glob": "*"
+    "tailwindcss": "^2.0.3"
   },
   "dependencies": {
     "@types/minimist": "^1.2.1",
     "codemirror": "^5.59.2",
+    "glob": "^7.1.6",
     "minimist": "^1.2.5",
     "react-error-boundary": "^3.1.0",
     "react-split": "^2.0.9"
